smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/conflicting-versions.smithy
// Cannot set Smithy version to 9.0 because it was previously set to 1.0
$version:1.0
$version:9.0
